--- a/plugins/emplugins/jsfx/0.2.3/manifest.json
+++ b/plugins/emplugins/jsfx/0.2.3/manifest.json
@@ -1,24 +1,30 @@
 {
-    "name": "jsfx",
-    "libname": "libjsfx",
-    "version": "0.2.3",
-    "short_description": "Jesusonics effects in csound",
-    "long_description": "These plugins allow csound to load and interact with jsusfx plugins",
-    "csound_version": "6.14",
-    "binaries": {
-        "linux": {
-            "url": "libjsfx.so",
-            "build_platform": "Ubuntu 16.04"
-        },
-        "macos": {
-            "url": "libjsfx.dylib",
-            "build_platform": "10.14.0"
-        }
+  "name": "jsfx",
+  "opcodes": [
+    "jsfx",
+    "jsfx_new",
+    "jsfx_play",
+    "jsfx_getslider",
+    "jsfx_setslider",
+    "tubeharmonics"
+  ],
+  "libname": "libjsfx",
+  "version": "0.2.3",
+  "short_description": "jsfx support for csound",
+  "long_description": "A csound interface to the opensource implementation of jsfx (a jitted language for dsp)",
+  "csound_version": "6.14",
+  "author": "Eduardo Moguillansky",
+  "email": "eduardo.moguillansky@gmail.com",
+  "license": "LGPL",
+  "repository": "",
+  "binaries": {
+    "linux": {
+      "url": "libjsfx.so",
+      "build_platform": "Ubuntu 16.04"
     },
-    "opcodes": [
-        "jsfx", "jsfx_new", "jsfx_setslider", "jsfx_play", "jsfx_getslider", "tubeharmonics"
-    ],
-    "author": "Eduardo Moguillansky",
-    "email": "eduardo.moguillansky@gmail.com",
-    "repository": "https://github.com/csound-plugins/csound-plugins"
+    "macos": {
+      "url": "libjsfx.dylib",
+      "build_platform": "10.14.0"
+    }
+  }
 }
