--- a/plugins/emplugins/klib/0.2.3/manifest.json
+++ b/plugins/emplugins/klib/0.2.3/manifest.json
@@ -1,31 +1,47 @@
 {
-    "name": "klib",
-    "libname": "libklib",
-    "version": "0.2.3",
-    "short_description": "hashtable / pool / string cache plugins",
-    "long_description": "Container plugins. Very efficient hashtable, an int pool to manage resources, string cache to pass/store strings as integers",
-    "csound_version": "6.14",
-    "binaries": {
-        "linux": {
-            "url": "libklib.so",
-            "build_platform": "Ubuntu 16.04"
-        },
-        "macos": {
-            "url": "libklib.dylib",
-            "build_platform": "10.14.0"
-        },
-        "windows": {
-            "url": "libklib.dll",
-            "build_platform": "Windows 10"
-        }
+  "name": "klib",
+  "opcodes": [
+    "dict_new",
+    "dict_free",
+    "dict_get",
+    "dict_geti",
+    "dict_set",
+    "dict_size",
+    "dict_query",
+    "dict_exists",
+    "dict_print",
+    "dict_iter",
+    "strcache",
+    "strview",
+    "pool_new",
+    "pool_gen",
+    "pool_pop",
+    "pool_push",
+    "pool_size",
+    "pool_capacity",
+    "pool_at"
+  ],
+  "libname": "libklib",
+  "version": "0.2.3",
+  "short_description": "A hashtable for csound",
+  "long_description": "A hashtable for csound",
+  "csound_version": "6.14",
+  "author": "Eduardo Moguillansky",
+  "email": "eduardo.moguillansky@gmail.com",
+  "license": "LGPL",
+  "repository": "",
+  "binaries": {
+    "linux": {
+      "url": "libklib.so",
+      "build_platform": "Ubuntu 16.04"
     },
-    "opcodes": [
-        "dict_exists", "dict_free", "dict_get", "dict_geti", "dict_iter", "dict_new", "dict_print",
-        "dict_query", "dict_set", "dict_size", "pool_at", "pool_capacity", "pool_gen",
-        "pool_new", "pool_pop", "pool_push", "pool_size",
-        "strcache", "strview"
-    ],
-    "author": "Eduardo Moguillansky",
-    "email": "eduardo.moguillansky@gmail.com",
-    "repository": "https://github.com/csound-plugins/csound-plugins"
+    "macos": {
+      "url": "libklib.dylib",
+      "build_platform": "10.14.0"
+    },
+    "windows": {
+      "url": "libklib.dll",
+      "build_platform": "Windows 7"
+    }
+  }
 }
