--- a/plugins/emplugins/pathtools/0.2.3/manifest.json
+++ b/plugins/emplugins/pathtools/0.2.3/manifest.json
@@ -1,44 +1,40 @@
 {
-    "name": "pathtools",
-    "libname": "libpathtools",
-    "version": "0.2.3",
-    "short_description": "Cross-platform path handling",
-    "long_description": "Opcodes to handle path operations (join, split, split extension, make absolute, etc) in a cross-platform way. All opcodes are aware off the platform they are running and make it possible to write code which works in unix and windows. This plugin includes opcodes to query the current platform, the directory of the loaded script, environment variables, etc.",
-    "csound_version": "6.14",
-    "binaries": {
-        "linux": {
-            "url": "libklib.so",
-            "build_platform": "Ubuntu 16.04"
-        },
-        "macos": {
-            "url": "libklib.dylib",
-            "build_platform": "10.14.0"
-        },
-        "windows": {
-            "url": "libklib.dll",
-            "build_platform": "Windows 10"
-        }
+  "name": "pathtools",
+  "opcodes": [
+    "findFileInPath",
+    "getEnvVar",
+    "pathAbsolute",
+    "pathIsAbsolute",
+    "pathJoin",
+    "pathNative",
+    "pathSplit",
+    "pathSplitk",
+    "pathSplitExt",
+    "pathSplitExtk",
+    "scriptDir",
+    "sysPlatform"
+  ],
+  "libname": "libpathtools",
+  "version": "0.2.3",
+  "short_description": "Cross-platform path handling",
+  "long_description": "Cross-platform path handling",
+  "csound_version": "6.14",
+  "author": "Eduardo Moguillansky",
+  "email": "eduardo.moguillansky@gmail.com",
+  "license": "LGPL",
+  "repository": "",
+  "binaries": {
+    "linux": {
+      "url": "libpathtools.so",
+      "build_platform": "Ubuntu 16.04"
     },
-    "opcodes": [
-         "findFileInPath",
-         "getEnvVar",
-      
-         "pathAbsolute",
-         "pathIsAbsolute",
-      
-         "pathJoin",
-         "pathNative",
-      
-         "pathSplit",
-         "pathSplitk",
-      
-         "pathSplitExt",
-         "pathSplitExtk",
-
-         "scriptDir",
-         "sysPlatform"        
-    ],
-    "author": "Eduardo Moguillansky",
-    "email": "eduardo.moguillansky@gmail.com",
-    "repository": "https://github.com/csound-plugins/csound-plugins"
+    "macos": {
+      "url": "libpathtools.dylib",
+      "build_platform": "10.14.0"
+    },
+    "windows": {
+      "url": "libpathtools.dll",
+      "build_platform": "Windows 7"
+    }
+  }
 }
