--- a/plugins/emplugins/jsfx/0.2.3/manifest.json
+++ b/plugins/emplugins/jsfx/0.2.3/manifest.json
@@ -16,7 +16,7 @@
   "author": "Eduardo Moguillansky",
   "email": "eduardo.moguillansky@gmail.com",
   "license": "LGPL",
-  "repository": "",
+  "repository": "https://github.com/csound-plugins/csound-plugins/tree/master/src/jsfx",
   "binaries": {
     "linux": {
       "url": "libjsfx.so",
