--- a/plugins/emplugins/klib/0.2.3/manifest.json
+++ b/plugins/emplugins/klib/0.2.3/manifest.json
@@ -29,7 +29,7 @@
   "author": "Eduardo Moguillansky",
   "email": "eduardo.moguillansky@gmail.com",
   "license": "LGPL",
-  "repository": "",
+  "repository": "https://github.com/csound-plugins/csound-plugins/tree/master/src/klib",
   "binaries": {
     "linux": {
       "url": "libklib.so",
