test external url

--- a/plugins/em/else/manifest.json
+++ b/plugins/em/else/manifest.json
@@ -48,7 +48,8 @@
   "repository": "https://github.com/csound-plugins/csound-plugins",
   "binaries": {
     "linux": {
-      "url": "libelse.so",
+      "url": "https://github.com/csound-plugins/csound-plugins/releases/download/latest/csound-plugins--linux.zip",
+      "extractpath": "libelse.so"
       "build_platform": "Ubuntu 16.04"
     },
     "macos": {
